--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 NAME
-VERSION
-    version 0.03 Checkout::CyberSource::SOAP A Modern Perl interface to
-    CyberSource's SOAP API.
+    Checkout::CyberSource::SOAP
+
+  WHAT?
+    A Modern Perl interface to CyberSource's SOAP API.
 
 WHY?
     Folks often have a need for simple and quick, but "enterprise-level"
