Import of AMIRI/Checkout-CyberSource-SOAP-0.07 from CPAN.
gitpan-cpan-distribution: Checkout-CyberSource-SOAP
gitpan-cpan-version:      0.07
gitpan-cpan-path:         AMIRI/Checkout-CyberSource-SOAP-0.07.tar.gz
gitpan-cpan-author:       AMIRI
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -161,10 +161,11 @@ AUTHOR
     Amiri Barksdale <amiri@metalabel.com>
 
 CONTRIBUTORS
-    Tomas Doran (t0m) <bobtfish@bobtfish.net>
+    Tomas Doran (t0m) <bobtfish@bobtfish.net> Caleb Cushing (xenoterracide)
+    <xenoterracide@gmail.com>
 
 COPYRIGHT
-    Copyright (c) 2010 the Checkout::CyberSource::SOAP "AUTHOR" and
+    Copyright (c) 2011 the Checkout::CyberSource::SOAP "AUTHOR" and
     "CONTRIBUTORS" as listed above.
 
 LICENSE
